--- a/src/PMT/WebBundle/Resources/views/Issue/navigator.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Issue/navigator.html.twig
@@ -1,4 +1,5 @@
 {% extends "PMTWebBundle::layout.html.twig" %}
+{% trans_default_domain 'PMTWebBundle' %}
 
 {% block content_title %}{{ 'issue.issues'|trans }}{% endblock %}
 
