--- a/src/PMT/WebBundle/Resources/views/Project/layout.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Project/layout.html.twig
@@ -6,7 +6,7 @@
     <ul class="actions nav nav-pills pull-right">
         <li class="active">
             <a href="{{ path('pmtweb_project_issue_form', {'projectCode': project.code}) }}"><i
-                        class="icon-edit icon-plus"></i> Create issue</a>
+                        class="icon-edit icon-plus"></i> {{ 'issue.link.create'|trans }}</a>
         </li>
         <li>
             <a href="#"><i class="icon-wrench"></i> Settings</a>
