--- a/src/PMT/WebBundle/Resources/views/Issue/detail.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Issue/detail.html.twig
@@ -119,7 +119,7 @@
                 <div class="accordion-group">
                     <div class="accordion-heading">
                         <a class="accordion-toggle" data-toggle="collapse" href="#accordion_activity">
-                            {{ 'issue.activity'|trans }}
+                            {{ 'activity.activity_stream'|trans }}
                         </a>
                     </div>
                     <div id="accordion_activity" class="accordion-body collapse">
