--- a/src/PMT/WebBundle/Resources/views/Issue/navigator.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Issue/navigator.html.twig
@@ -69,7 +69,7 @@
                 <div class="accordion-group">
                     <div class="accordion-heading">
                         <a class="accordion-toggle" data-toggle="collapse" href="#accordion_owner">
-                            Owner
+                            {{ 'issue.navigator.owner'|trans }}
                         </a>
                     </div>
                     <div id="accordion_owner" class="accordion-body collapse in">
