--- a/src/PMT/WebBundle/Resources/views/Project/summary.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Project/summary.html.twig
@@ -1,4 +1,5 @@
 {% extends "PMTWebBundle:Project:layout.html.twig" %}
+{% trans_default_domain 'PMTWebBundle' %}
 
 {% block tabContent %}
     <div class="row-fluid">
@@ -37,7 +38,7 @@
                 <div class="accordion-group">
                     <div class="accordion-heading">
                         <a class="accordion-toggle" data-toggle="collapse" href="#accordion_milestones">
-                            Milestones
+                            {{ 'milestone.milestones'|trans }}
                         </a>
                     </div>
                     <div id="accordion_milestones" class="accordion-body collapse in">
@@ -51,7 +52,7 @@
                 <div class="accordion-group">
                     <div class="accordion-heading">
                         <a class="accordion-toggle" data-toggle="collapse" href="#accordion_stream">
-                            Activity stream
+                            {{ 'activity.activity_stream'|trans }}
                         </a>
                     </div>
                     <div id="accordion_stream" class="accordion-body collapse in">
