--- a/src/PMT/WebBundle/Resources/views/Menu/primary.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Menu/primary.html.twig
@@ -1,3 +1,5 @@
+{% trans_default_domain 'PMTWebBundle' %}
+
 <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
     <span class="icon-bar"></span>
     <span class="icon-bar"></span>
@@ -9,24 +11,24 @@
         <li class="dropdown">
             <a data-toggle="dropdown" class="dropdown-toggle" href="#">{{ app.user.username }} <b class="caret"></b></a>
             <ul class="dropdown-menu">
-                <li><a href="{{ path('fos_user_profile_show') }}">Profile</a></li>
-                <li><a href="#">Preferences</a></li>
+                <li><a href="{{ path('fos_user_profile_show') }}">{{ 'user.link.profile'|trans }}</a></li>
+                <li><a href="#">{{ 'user.link.preferences'|trans }}</a></li>
                 <li class="divider"></li>
-                <li><a href="{{ path('fos_user_security_logout') }}">Logout</a></li>
+                <li><a href="{{ path('fos_user_security_logout') }}">{{ 'user.link.logout'|trans }}</a></li>
             </ul>
         </li>
     </ul>
     <ul class="nav">
-        <li{% if app.request.attributes.get('_route') == 'pmtweb_dashboard' %} class="active"{% endif %}><a href="{{ path('pmtweb_dashboard') }}">Dashboard</a></li>
-        <li{% if app.request.attributes.get('_route') == 'pmtweb_issue_navigator' %} class="active"{% endif %}><a href="{{ path('pmtweb_issue_navigator') }}">Issues</a></li>
+        <li{% if app.request.attributes.get('_route') == 'pmtweb_dashboard' %} class="active"{% endif %}><a href="{{ path('pmtweb_dashboard') }}">{{ 'dashboard.dashboard'|trans }}</a></li>
+        <li{% if app.request.attributes.get('_route') == 'pmtweb_issue_navigator' %} class="active"{% endif %}><a href="{{ path('pmtweb_issue_navigator') }}">{{ 'issue.issues'|trans }}</a></li>
         <li class="dropdown">
-            <a data-toggle="dropdown" class="dropdown-toggle" href="#">Project <b class="caret"></b></a>
+            <a data-toggle="dropdown" class="dropdown-toggle" href="#">{{ 'project.projects'|trans }} <b class="caret"></b></a>
             <ul class="dropdown-menu">
                 {% for project in projects %}
                     <li><a href="{{ path('pmtweb_project_summary', {'code': project.code}) }}">{{ project.name }} <span class="tag project">{{ project.code }}</span></a></li>
                 {% endfor %}
                 <li class="divider"></li>
-                <li><a href="{{ path('pmtweb_project_form') }}">Create</a></li>
+                <li><a href="{{ path('pmtweb_project_form') }}">{{ 'project.link.create'|trans }}</a></li>
                 <li><a href="#">Settings</a></li>
             </ul>
         </li>
