--- a/src/PMT/WebBundle/Resources/views/User/profile.html.twig
+++ b/src/PMT/WebBundle/Resources/views/User/profile.html.twig
@@ -1,4 +1,5 @@
 {% extends "PMTWebBundle::layout.html.twig" %}
+{% trans_default_domain 'PMTWebBundle' %}
 
 {% block content_title %}{{ user.username }}{% endblock %}
 
@@ -24,7 +25,7 @@
                 <div class="accordion-group">
                     <div class="accordion-heading">
                         <a class="accordion-toggle" data-toggle="collapse" href="#accordion_details">
-                            Contact details
+                            {{ 'user.contact_details'|trans }}
                         </a>
                     </div>
                     <div id="accordion_details" class="accordion-body collapse in">
@@ -50,7 +51,7 @@
                 <div class="accordion-group">
                     <div class="accordion-heading">
                         <a class="accordion-toggle" data-toggle="collapse" href="#accordion_stream">
-                            Activity stream
+                            {{ 'activity.activity_stream'|trans }}
                         </a>
                     </div>
                     <div id="accordion_stream" class="accordion-body collapse in">
@@ -66,7 +67,7 @@
                 <div class="accordion-group">
                     <div class="accordion-heading">
                         <a class="accordion-toggle" data-toggle="collapse" href="#accordion_projects">
-                            Projects
+                            {{ 'project.projects'|trans }}
                         </a>
                     </div>
                     <div id="accordion_projects" class="accordion-body collapse in">
@@ -80,7 +81,7 @@
                 <div class="accordion-group">
                     <div class="accordion-heading">
                         <a class="accordion-toggle" data-toggle="collapse" href="#accordion_issues">
-                            Issues
+                            {{ 'issue.issues'|trans }}
                         </a>
                     </div>
                     <div id="accordion_issues" class="accordion-body collapse in">
