--- a/src/PMT/WebBundle/Resources/views/Project/layout.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Project/layout.html.twig
@@ -5,11 +5,14 @@
 {% block content_actions %}
     <ul class="actions nav nav-pills pull-right">
         <li class="active">
-            <a href="{{ path('pmtweb_project_issue_form', {'projectCode': project.code}) }}"><i
-                        class="icon-edit icon-plus"></i> Create issue</a>
+            <a href="{{ path('pmtweb_project_issue_form', {'projectCode': project.code}) }}">
+                <i class="icon-edit icon-plus"></i> Create issue
+            </a>
         </li>
         <li>
-            <a href="#"><i class="icon-wrench"></i> Settings</a>
+            <a href="{{ path('pmtweb_project_edit', {'projectCode': project.code}) }}">
+                <i class="icon-wrench"></i> Settings
+            </a>
         </li>
     </ul>
 {% endblock %}
