--- a/src/PMT/WebBundle/Resources/views/Project/editForm.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Project/editForm.html.twig
@@ -38,11 +38,11 @@
                                     <div class="accordion">
                                         <div class="accordion-group">
                                             <div class="accordion-heading">
-                                                <a class="accordion-toggle" data-toggle="collapse" href="#accordion_details">
+                                                <a class="accordion-toggle" data-toggle="collapse" href="#">
                                                     Details
                                                 </a>
                                             </div>
-                                            <div id="accordion_details" class="accordion-body collapse in">
+                                            <div class="accordion-body collapse in">
                                                 <div class="accordion-inner">
 
                                                     <div class="control-group">
@@ -86,11 +86,11 @@
                                     <div class="accordion">
                                         <div class="accordion-group">
                                             <div class="accordion-heading">
-                                                <a class="accordion-toggle" data-toggle="collapse" href="#accordion_people">
+                                                <a class="accordion-toggle" data-toggle="collapse" href="#">
                                                     People
                                                 </a>
                                             </div>
-                                            <div id="accordion_people" class="accordion-body collapse in">
+                                            <div class="accordion-body collapse in">
                                                 <div class="accordion-inner">
                                                     <div class="control-group">
                                                         <div class="control-label">
@@ -114,11 +114,11 @@
                                     <div class="accordion">
                                         <div class="accordion-group">
                                             <div class="accordion-heading">
-                                                <a class="accordion-toggle" data-toggle="collapse" href="#accordion_workflow">
+                                                <a class="accordion-toggle" data-toggle="collapse" href="#">
                                                     Workflow
                                                 </a>
                                             </div>
-                                            <div id="accordion_workflow" class="accordion-body collapse in">
+                                            <div class="accordion-body collapse in">
                                                 <div class="accordion-inner">
                                                     <div class="control-group">
                                                         <div class="control-label">
